[package]

name = "marauder"
version = "0.0.1"
authors = [
    "ozkriff@gmail.com",
]
edition = "2018"

#[[bin]]
#name = "marauder"
#test = false

[dependencies]
gl = "0.14.0"
glfw = "0.40.0"
cgmath = "0.6.0"
error-context = "0.1.2"
stb_image = "0.2.2"
time = "0.1.0"
rand = "0.7.3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"

[dependencies.stb_tt]
git = "https://github.com/ozkriff/stb-tt-rs"
